agregado los ultimos detalles al swager
